corrected box-shadow, and padding on mobile devices

--- a/style/content/_no-definitions-found.scss
+++ b/style/content/_no-definitions-found.scss
@@ -10,7 +10,7 @@
 	h3 {
         text-transform: capitalize;
 		font-size: var(--md);
-		margin-top: 2.4rem;
+		margin-top: 1rem;
 		color: var(--default-color);
 	}
 	p {
