--- a/style/header/_header.scss
+++ b/style/header/_header.scss
@@ -36,7 +36,8 @@ header {
 				min-width: 183px;
 				padding: 1rem 0 2rem;
 				background-color: var(--dropdown-background-color);
-				box-shadow: 0 5px 16px 7px var(--dropdown-box-shadow);
+				box-shadow: 0 0 30px 10px var(--dropdown-box-shadow1), 0 0 30px 5px var(--dropdown-box-shadow2), 0 0 20px 0 var(--dropdown-box-shadow3) ;
+				
 			}
 			.hide-content {
 				display: none;
