--- a/style/main.scss
+++ b/style/main.scss
@@ -66,7 +66,9 @@ html {
 
 	--background-color: #fff;
 	--default-color: #000;
-	--dropdown-box-shadow: #efefef;
+	--dropdown-box-shadow1: #efefef;
+	--dropdown-box-shadow2: #efefef;
+	--dropdown-box-shadow3: #efefef;
 
 	--dropdown-option-color: #000;
 	--dropdonw-hover-color: #a445ed;
@@ -80,7 +82,10 @@ html {
 	--default-color: #fff;
 	--background-color: #050505;
 	--dropdown-background-color: #1f1f1f;
-	--dropdown-box-shadow: #6a2d99;
+	--dropdown-box-shadow1: #8333b227;
+	--dropdown-box-shadow2: #5d247e96;
+	--dropdown-box-shadow3: #a445ed7e;
+
 	--switch-theme: #a445ed;
 	--input-background-color: #1f1f1f;
 	--separete-line: #3a3a3a;
@@ -89,7 +94,9 @@ html {
 	--dropdown-option-color: #000;
 	--background-color: #fff;
 	--default-color: #000;
-	--dropdown-box-shadow: #efefef;
+	--dropdown-box-shadow1: #efefef;
+	--dropdown-box-shadow2: #efefef;
+	--dropdown-box-shadow3: #efefef;
 	--dropdown-background-color: #ffff;
 	--switch-theme: #757575;
 	--input-background-color: #f4f4f4;
@@ -100,7 +107,9 @@ html {
 		--dropdown-background-color: #1f1f1f;
 		--dropdown-option-color: #fff;
 		--default-color: #fff;
-		--dropdown-box-shadow: #6a2d99;
+		--dropdown-box-shadow1: #8333b227;
+		--dropdown-box-shadow2: #5d247e96;
+		--dropdown-box-shadow3: #a445ed7e;
 		--background-color: #050505;
 		--switch-theme: #a445ed;
 		--input-background-color: #1f1f1f;
@@ -108,7 +117,7 @@ html {
 	}
 }
 
-@media (max-width: 375px) {
+@media (max-width: 576px) {
 	.wrapper {
 		padding: 5.8rem 0;
 	}
